--- a/Homework2_report.Rmd
+++ b/Homework2_report.Rmd
@@ -6,15 +6,17 @@ output: html_document
 
 ## Name
 
-Please enter your name here.
+Tarun Manoharan
 
 ### Setup
 
 Read in the data with `read_csv()` and store the data as an R object named `dataset`. Check the data to make sure all of the expected observations and variables are there.
 
 
-```{r}
+```{r, message = FALSE}
 ## Load the data and any necessary packages here.
+library(dplyr)
+maacs = read.csv("maacs.csv.gz")
 
 ```
 
@@ -33,6 +35,24 @@ NOTE: For this part, do not use any plots.
 ```{r}
 ## Write your function here
 
+check = function(data){
+  median =  median(data$age)
+  
+  younger_range = data %>% filter(age <= median)
+  older_range = data %>% filter(age > median)
+  
+  
+  head(younger_range)
+  head(older_range)
+  
+  if (mean(older_range$fev1, na.rm = TRUE) > mean(younger_range$fev1, na.rm = TRUE)){
+    return(TRUE)
+  }
+  return(FALSE)
+}
+
+check(maacs)
+
 ```
 
 
@@ -44,6 +64,9 @@ How much does FEV1 change for a 1-year increase in the child's age?
 
 ```{r}
 ## Add your code here
+
+model = lm(fev1 ~ age, data = maacs)
+summary(model)
 
 ```
 
